# ainft

./: .cursorrules  .gitignore  Anchor.toml  README.md  aiCharacterBody.md  docker-compose.yml  justfile  next.config.js  tailwind.config.js
.next/: trace
ainft-execution-client/: README.md  docker-compose.yml  jest.config.js  jest.setup.js
docs/: execution-client-specification.md
frontend/: README.md  next.config.js  next.config.mjs  next.config.ts  tailwind.config.js
model-deployment/: Dockerfile  app.py  auth.py  cache.py  requirements.txt  telemetry.py  validation.py
programs/ainft/: Cargo.toml  README.md
programs/ainft/src/: error.rs  lib.rs
programs/ainft/src/actions/: mod.rs
programs/ainft/src/events/: mod.rs
programs/ainft/src/instructions/: create_ai_character_compute_account.rs  create_app_ainft.rs  create_character_config.rs  create_collection.rs  create_compute_mint.rs  create_preminted_nft.rs  create_stake_account.rs  finalize_preminting.rs  mint_ainft.rs  mint_compute.rs  mod.rs  premint_nft.rs  purchase_preminted_nft.rs  register_execution_client.rs  send_message.rs  set_external_compute_mint.rs  stake_compute.rs  unstake_compute.rs  update_ai_character_config.rs  update_ai_character_execution_client.rs  update_character_config.rs  update_character_config_fields.rs  update_collection.rs  update_collection_whitelist.rs  update_execution_client_config.rs  write_response.rs
programs/ainft/src/state/: ai_character.rs  ai_nft.rs  ai_nft_collection.rs  character_config.rs  config.rs  execution_client.rs  message.rs  mod.rs  stake_account.rs
(+66 files in other folders)
