[package]
name = "ainft"
version = "0.1.0"
description = "AI NFT Protocol - A protocol for creating NFTs backed by an AI agent"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ainft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = ["anchor-spl/default"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata", "token"] }
#solana-program = "~2.1.6"
